<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ee.ria.riha</groupId>
    <artifactId>browser</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.8</version>
        <relativePath/>
    </parent>

    <modules>
        <module>frontend</module>
        <module>backend</module>
<!--        <module>autotest</module>-->
    </modules>

    <properties>
        <revision>7.7.5</revision>
        <spring.boot.version>2.5.6</spring.boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
    </properties>

    <name>RIHA-Browser</name>
    <description>Application providing UI for managing info-systems meta information. Divided into backend and frontend modules.</description>

    <repositories>
        <repository>
            <id>ria-artifactory</id>
            <url>https://nexus.riaint.ee/repository/riha-maven-mixed-local/</url>
        </repository>
    </repositories>
  
</project>
